--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
-    "js-waku": "^0.30.0",
+    "ethers": "^5.4.6",
+    "js-waku": "^0.29.0",
     "node-sass": "^7.0.3",
     "process": "^0.11.10",
+    "protons": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
+    "root": "file:../js-waku",
     "sass-loader": "^13.1.0",
     "stream-browserify": "^3.0.0",
     "styled-components": "^5.3.6"
