--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "js-waku": "^0.29.0",
     "node-sass": "^7.0.3",
     "process": "^0.11.10",
+    "protobufjs": "^7.1.2",
     "protons": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
